SERVER-120346 Stage builder should not propagate placeholder results (#48649)

GitOrigin-RevId: 0df4d3874af7007d203927ce90bf6cf240fcfade